# cs146s

./: pyproject.toml
week1/: chain_of_thought.py  client.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: BEFORE_AFTER_COMPARISON.md  FRONTEND_INTEGRATION.md  INDEX.md  README.md  REFACTORING.md  REFACTORING_SUMMARY.md  VERIFICATION_CHECKLIST.md  test_integration.py  writeup.md
week2/app/: config.py  db.py  exceptions.py  main.py  schemas.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_extract.py
week3/: IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md
week3/server/: .env.example  .gitignore  Makefile  check_setup.py  claude_desktop_config.example.json  main.py  pyproject.toml  run.py  setup.py
week3/server/tests/: __init__.py  test_weather.py
